@@ -1,3 +1,8 @@
+2014-11-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* gtkimage.py (PhotoImagePixbuf): Fixed a bug related to photo
+	  image sizes (issue 114).
+
 2014-10-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/rss.py (RSSPhotoList): Fixed a bug that an entry has no
